tests/golden/err-sibling-not-imported/expected_error.txt
error: 名前 `index` は定義されていません
 --> ./entry.clum:1:5
  |
1 | x = index
  |     ^^^^^ 対応する束縛・import・prelude が見つかりません
